<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_gravity="center_vertical"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:singleLine="true"
			android:text="@string/app_name"
			android:textSize="24.0sp" />

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0.0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3.0"
				android:singleLine="true"
				android:text="@string/host"
				android:textSize="16.0sp" />

			<TextView
				android:layout_width="0.0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:singleLine="true"
				android:text="@string/port"
				android:textSize="16.0sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/host"
				android:layout_width="0.0dip"
				android:layout_height="wrap_content"
				android:layout_weight="3.0"
				android:hint="@string/value_host"
				android:inputType="text"
				android:singleLine="true"
				android:text="@string/value_host"
				android:textSize="18.0sp" />

			<EditText
				android:id="@+id/port"
				android:layout_width="0.0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:hint="@string/value_port"
				android:inputType="numberDecimal"
				android:singleLine="true"
				android:text="@string/value_port"
				android:textSize="18.0sp" />
		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:text="@string/username"
			android:textSize="16.0sp" />

		<EditText
			android:id="@+id/username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username"
			android:inputType="text"
			android:singleLine="true"
			android:textSize="18.0sp" />

		<Button
			android:id="@+id/btn_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/btn_login"
			android:textSize="20.0sp" />
	</LinearLayout>
</RelativeLayout>